--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@ title: Herpetology
 ---
 
 <div class="home" id="home">
-  <h1 class="pageTitle">Recent Posts</h1>
+
+<h1 class="pageTitle">Course materials</h1>
+<ul>
+<li><a href={{ site.baseurl }}/syllabus.html>Syllabus</a></li>
+<li><a href={{ site.baseurl }}/schedule.html>Lecture schedule</a></li>
+<li><a href={{ site.baseurl }}/labSchedule.html>Lab schedule</a></li>
+<li><a href={{ site.baseurl }}/lectureNotes.html>Lecture notes</a></li>
+<li>Assigned papers</li>
+</ul>
+
+
+
+  <h1 class="pageTitle">Recent updates</h1>
   <ul class="posts noList">
     {% for post in paginator.posts %}
       <li>
