adding reading for week 1

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Herpetology
 <li><a href={{ site.baseurl }}/schedule.html>Lecture schedule</a></li>
 <li><a href={{ site.baseurl }}/labSchedule.html>Lab schedule</a></li>
 <li><a href={{ site.baseurl }}/lectureNotes.html>Lecture notes</a></li>
-<li>Assigned papers</li>
+<li><a href={{ site.baseurl }}/papers.html>Assigned papers</a></li>
 </ul>
 
 
