--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ title: Herpetology
 <li><a href={{ site.baseurl }}/labSchedule.html>Lab schedule</a></li>
 <li><a href={{ site.baseurl }}/lectureNotes.html>Lecture notes</a></li>
 <li><a href={{ site.baseurl }}/papers.html>Assigned papers</a></li>
+<li><a href={{ site.baseurl }}/blog/missing-class/>Alternative assignment if you miss a Skype</a></li>
 </ul>
 
 
