--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Herpetology
 <li><a href={{ site.baseurl }}/lectureNotes.html>Lecture notes</a></li>
 <li><a href={{ site.baseurl }}/papers.html>Assigned papers</a></li>
 <li><a href={{ site.baseurl }}/blog/missing-class/>Alternative assignment if you miss a Skype</a></li>
-<li><a href={{ site.baseurl }}/blog/presentation-instructions/>Instructions for presentations</a></li>
+<li><a href={{ site.baseurl }}/blog/presentations/>Instructions for presentations</a></li>
 </ul>
 
 
