--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@ title: Herpetology
 
 <h1 class="pageTitle">Course materials</h1>
 <ul>
-<li><a href={{ site.baseurl }}/syllabus.html>Syllabus</a></li>
-<li><a href={{ site.baseurl }}/schedule.html>Lecture schedule</a></li>
-<li><a href={{ site.baseurl }}/labSchedule.html>Lab schedule</a></li>
-<li><a href={{ site.baseurl }}/lectureNotes.html>Lecture notes</a></li>
-<li><a href={{ site.baseurl }}/papers.html>Assigned papers</a></li>
+<li><a href={{ site.baseurl }}/syllabus/>Syllabus</a></li>
+<li><a href={{ site.baseurl }}/schedule/>Lecture schedule</a></li>
+<li><a href={{ site.baseurl }}/labSchedule/>Lab schedule</a></li>
+<li><a href={{ site.baseurl }}/lectureNotes/>Lecture notes</a></li>
+<li><a href={{ site.baseurl }}/papers/>Assigned papers</a></li>
 <li><a href={{ site.baseurl }}/blog/missing-class/>Alternative assignment if you miss a Skype</a></li>
 <li><a href={{ site.baseurl }}/blog/presentations/>Instructions for presentations</a></li>
 </ul>
