--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@ title: Herpetology
 <li><a href={{ site.baseurl }}/syllabus/>Syllabus</a></li>
 <li><a href={{ site.baseurl }}/schedule/>Lecture schedule</a></li>
 <li><a href={{ site.baseurl }}/labSchedule/>Lab schedule</a></li>
-<li><a href={{ site.baseurl }}/lectureNotes/>Lecture notes</a></li>
-<li><a href={{ site.baseurl }}/papers/>Assigned papers</a></li>
-<li><a href={{ site.baseurl }}/blog/missing-class/>Alternative assignment if you miss a Skype</a></li>
+<li><a href={{ site.baseurl }}/oldexams/>Exams from previous semesters</a></li>
 <li><a href={{ site.baseurl }}/blog/presentations/>Instructions for presentations</a></li>
 </ul>
 
