fix presentations link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Herpetology
 <li><a href={{ site.baseurl }}/schedule/>Lecture schedule</a></li>
 <li><a href={{ site.baseurl }}/labSchedule/>Lab schedule</a></li>
 <li><a href={{ site.baseurl }}/oldexams/>Exams from previous semesters</a></li>
-<li><a href={{ site.baseurl }}/blog/presentations/>Instructions for presentations</a></li>
+<li><a href={{ site.baseurl }}/assets/papers/blankForm.pdf>Instructions for presentations</a></li>
 </ul>
 
 
