--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@ title: Herpetology
 <li><a href={{ site.baseurl }}/syllabus/>Syllabus</a></li>
 <li><a href={{ site.baseurl }}/schedule/>Lecture schedule</a></li>
 <li><a href={{ site.baseurl }}/labSchedule/>Lab schedule</a></li>
+<li><a href={{ site.baseurl }}/oldExams/>Old exams</a></li>
+
 
 </ul>
 
