--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ title: Herpetology
 <li><a href={{ site.baseurl }}/schedule/>Lecture schedule</a></li>
 <li><a href={{ site.baseurl }}/labSchedule/>Lab schedule</a></li>
 <li><a href={{ site.baseurl }}/oldExams/>Old exams</a></li>
+<li><a href={{ site.baseurl }}/final/>Final exam 2017</a></li>
+
 
 
 </ul>
